Refactor configuration structure to separate Emby and MDbList settings, enhancing clarity and maintainability

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -4,24 +4,6 @@
 # overwrite this file without losing your settings.
 
 [admin]
-# Emby server URL
-emby_server_url = https://example.com:8096
-
-# User ID of an Emby admin user, NOT user name.  
-# To find this ID, navigate to "Manage Emby Server" > "Users", 
-# click on an admin user, and grab the userID from the URL.
-emby_user_id = abc123
-
-# Emby API key. 
-# To find this key, go to "Manage Emby Server" > "Advanced" > "API Keys"
-# and click on "New API Key"
-emby_api_key = abc123
-
-# MDBList API key. 
-# Create an account on https://mdblist.com/, scroll to the bottom of 
-# https://mdblist.com/preferences/ to "API Access", and generate an API key
-mdblist_api_key = abc123
-
 # Set to True to enable downloading of lists added manually below
 download_manually_added_lists = True
 
@@ -54,4 +36,31 @@ update_items_sort_names_default_value = False
 refresh_items_in_collections = True
 refresh_items_in_collections_max_days_since_added = 10
 refresh_items_in_collections_max_days_since_premiered = 30
+
+[emby]
+# Emby server URL
+emby_server_url = https://example.com:8096
+
+# User ID of an Emby admin user, NOT user name.
+# To find this ID, navigate to "Manage Emby Server" > "Users",
+# click on an admin user, and grab the userID from the URL.
+emby_user_id = abc123
+
+# Emby API key.
+# To find this key, go to "Manage Emby Server" > "Advanced" > "API Keys"
+# and click on "New API Key"
+emby_api_key = abc123
+
+
+[mdblist]
+# MDBList API key.
+# Create an account on https://mdblist.com/, scroll to the bottom of
+# https://mdblist.com/preferences/ to "API Access", and generate an API key
+mdblist_api_key = abc123
+
+[anilist]
+
+
+[trakt]
+
 
