Add logging configuration and enhance script execution options

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -4,6 +4,18 @@
 # overwrite this file without losing your settings.
 
 [admin]
+# Set the path to the logs directory.
+log_file = logs/logs.log
+
+# Set to True to run the script on startup.
+on_startup = True
+
+# Set the frequency of script execution (in hours). Set to 0 to disable repetition
+hours_between_refresh = 6
+
+# Troubleshooting and development options
+testing = False
+
 # Set to True to enable downloading of lists added manually below
 download_manually_added_lists = True
 
@@ -17,8 +29,7 @@ use_mdblist_collection_description = True
 # Change Sort Name of Collections so that those that get modified are at the top
 update_collection_sort_name = True
 
-# Set the frequency of script execution (in hours). Set to 0 to disable repetition
-hours_between_refresh = 6
+
 
 # Set to True to update the sort names of TV Shows and Movies so that
 # they are sorted by time added to Emby. This is useful if you want to see the latest
